the_project/overlays/staging/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: project-route
spec:
  parentRefs:
  - name: shared-gateway
    namespace: default
  hostnames:
    - staging.localhost
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: todo-app-svc
        port: 80
    - matches:
      - path:
          type: PathPrefix
          value: /break
      - path:
          type: PathPrefix
          value: /todos
      backendRefs:
      - name: todo-backend-svc
        port: 80
